# rag-graph-rag-azure-openai

./: .env.sample  .gitignore  README.md  graph_rag.ipynb  pyproject.toml  settings.yaml.sample
input/: input.txt
output/: communities.parquet  community_reports.parquet  documents.parquet  entities.parquet  relationships.parquet  stats.json  text_units.parquet
