[project]
name = "graphrag-demo"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "graphrag>=2.7.0",
    "ipykernel>=7.1.0",
    "markitdown[pdf]>=0.0.2",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "openai>=2.7.1",
    "pip>=25.3",
    "python-dotenv>=1.2.1",
]
